--- a/SEA.P/Web/Content/css/sea-controls-new.css
+++ b/SEA.P/Web/Content/css/sea-controls-new.css
@@ -32,6 +32,7 @@ position:relative;
 width:100%;
 height:100%;
 background-color:rgb(151,175,207);
+touch-action: none;
 }
 .sea-slider > .track > .slider.pointerup {background-color:rgb(151,175,207) !important;}
 .sea-slider > .track > .slider.pointerdown {background-color:rgb(62,95,138) !important;}
